5.2.12
  - Correct handling of display attributes at end of line. The output attributes are set to default
    at the end of content for the line and at the start of a new line.  Previously the current
    attribute would extend to the next start of content. This was odd to reason about and was the
    cause of https://github.com/coreyoconnor/vty/issues/76
    IIRC Yi requires the old behavior to display the selection region correctly.
  - shutdown of the input thread is now performed using killThread and synchronization on an MVar.
    For correct handling of the terminal read vmin and vtime the read must be a blocking read on an
    OS thread. This places a threadWaitRead, which will be interrupted by the killThread, prior to
    the uninterruptable read. An alternative would be to re-import the read foreign call as
    interruptable.

5.2.11
  - deepseq bounds increased for tests.
  - Clean up warnings when compiling on 7.10
    - Thanks Eric Mertens
  - Avoid discarding input bytes after multi-byte encoded codepoint
    - Thanks Eric Mertens

5.2.10
  - "str" now returns EmptyImage for empty strings to match behavior of other string-like Image constructors (fixes #74)
    - Thanks Jonathan Daugherty

5.2.9
  - dependency version bumps
    - https://github.com/coreyoconnor/vty/pull/71
    - https://github.com/coreyoconnor/vty/pull/70
  - Correct/Simplify the example code
    - Thanks glguy
    - https://github.com/coreyoconnor/vty/pull/69

5.2.8
  - blaze-builder, lens, utf8-string version constraint bump
      - Thanks glguy
      - https://github.com/coreyoconnor/vty/pull/67
  - Do not differentiate based on TERM_PROGRAM
      - https://github.com/coreyoconnor/vty/issues/68

5.2.7
  - lens and deepseq constraint bump + misc
      - Thanks ethercrow
      - https://github.com/coreyoconnor/vty/pull/66

5.2.6
  - lens constraint bump
      - Thanks alexander-b!
      - https://github.com/coreyoconnor/vty/pull/64

5.2.5
  - lens and random version constraint bump.