@@ -1,4 +1,7 @@
 5.2.12
+  - The standard IO Config (standardIOConfig) was overriding any provided application config.
+    In addition, the inputFd and outputFd could not be changed if mkVty was used.
+    Fixed.
   - Correct handling of display attributes at end of line. The output attributes are set to default
     at the end of content for the line and at the start of a new line.  Previously the current
     attribute would extend to the next start of content. This was odd to reason about and was the
